2007-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/ChooseRuntimePanel.cs, Gui/CodeGenerationPanel.cs,
	  FormattingStrategy/CSharpFormattingStrategy.cs, CSharpAmbience.cs: Fix
	  warnings.
	* Gui/CSharpTextEditorExtension.cs, Parser/Resolver.cs: Disable code
	  completion inside enum declarations. Fixes bug #82541. Removed some
	  warnings.
	* gtk-gui/generated.cs, gtk-gui/CSharpBinding.CodeGenerationPanelWidget.cs,
	  gtk-gui/CSharpBinding.FormattingPanelWidget.cs, gtk-gui/gui.stetic:
	  Updated.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82770: MonoDevelop should keep in
	  comments when return is pressed.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82768: Move cursor after new
	  summary comment.

2007-09-12  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed 82311: Rename fails when we have two
	  variables that are called the same.

2007-09-11  Ankit Jain  <jankit@novell.com>

	* CSharpBindingCompilerManager.cs (Compile): Pass /warn: command line
	param.

2007-09-11  Mike Krüger <mkrueger@novell.com> 

	* Parser/CodeGenerator.cs: Fixed 82500: Rename refactoring enum value
	  crashes MonoDevelop.

2007-09-10  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 82760: Nul ref enableing autocomplete.

2007-09-10  Mike Krüger <mkrueger@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82223: Overload selection does not
	  work when breaking the line.

2007-09-10   <> 

	* Gui/CSharpTextEditorExtension.cs: Fixed 82683: MonoDevelop should generate
	  XML documentation when /// is typed.

2007-09-07  Lluis Sanchez Gual <lluis@novell.com> 

	* Gui/CSharpTextEditorExtension.cs: Track api changes.

2007-09-07  Mike Krüger <mkrueger@novell.com> 

	* Parser/Resolver.cs: Fixed 82505: No autocomplete for static members. Fixed
	  some other resolve cases too. (non static members only in non static
	  methods)
